--- a/service.html
+++ b/service.html
@@ -58,15 +58,15 @@
 
         <div class="content">
             <div class="image-grid">
-                <div class="image-container"  onclick="addToCart(this)" id = "watch1"><img src="images/1.jpg" alt="Watch 1"><h2>Watch 1</h2><h3>$3000</h3></div>
-                <div class="image-container" onclick="addToCart(this)" id = "watch2"><img src="images/2.png" alt="Watch 2"><h2>Watch 2</h2><h3>$8000</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch3"><img src="images/3.jpg" alt="Watch 3"><h2>Watch 3</h2><h3>$9000</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch4"><img src="images/pic4.jpg" alt="Watch 4"><h2>Watch 4</h2><h3>$2500</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch5"><img src="images/pic5.jpg" alt="Watch 5"><h2>Watch 5</h2><h3>$6000</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch6"><img src="images/pic6.jpg" alt="Watch 6"><h2>Watch 6</h2><h3>$4000</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch7"><img src="images/pic7.jpg" alt="Watch 7"><h2>Watch 7</h2><h3>$9000</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch8"><img src="images/pic8.jpg" alt="Watch 8"><h2>Watch 8</h2><h3>$9700</h3></div>
-                <div class="image-container"  onclick="addToCart(this)" id = "watch9"><img src="images/pic9.jpg" alt="Watch 9"><h2>Watch 9</h2><h3>$6800</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch1"><img src="1.jpg" alt="Watch 1"><h2>Watch 1</h2><h3>$3000</h3></div>
+                <div class="image-container" onclick="addToCart(this)" id = "watch2"><img src="2.png" alt="Watch 2"><h2>Watch 2</h2><h3>$8000</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch3"><img src="3.jpg" alt="Watch 3"><h2>Watch 3</h2><h3>$9000</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch4"><img src="pic4.jpg" alt="Watch 4"><h2>Watch 4</h2><h3>$2500</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch5"><img src="pic5.jpg" alt="Watch 5"><h2>Watch 5</h2><h3>$6000</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch6"><img src="pic6.jpg" alt="Watch 6"><h2>Watch 6</h2><h3>$4000</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch7"><img src="pic7.jpg" alt="Watch 7"><h2>Watch 7</h2><h3>$9000</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch8"><img src="pic8.jpg" alt="Watch 8"><h2>Watch 8</h2><h3>$9700</h3></div>
+                <div class="image-container"  onclick="addToCart(this)" id = "watch9"><img src="pic9.jpg" alt="Watch 9"><h2>Watch 9</h2><h3>$6800</h3></div>
             </div>
         </div>
 
