--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="login form.html" class="current">Login</a></li>
+                    <li><a href="index.html" class="current">Login</a></li>
                 </ul>
             </div>
           <!-- <div class="search">
