--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="service.html">Request Services</a></li>
                     <li><a href="aboutUs.html" class="current">About Us</a></li>
-                    <li><a href="login form.html">Log Out</a></li>
+                    <li><a href="index.html">Log Out</a></li>
                 </ul>
             </div>
           <!-- <div class="search">
