--- a/service.html
+++ b/service.html
@@ -46,7 +46,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="service.html" class="current">Request Services</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
                     <li><a href="index.html">Log Out</a></li>
                 </ul>
             </div>
