--- a/invoice.html
+++ b/invoice.html
@@ -50,8 +50,8 @@
             <div class="menu">
                 <ul>
                     <li><a href="service.html" class="current">Request Services</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                    <li><a href="index.html">Log Out</a></li>
+                    <li><a href="aboutUs.html class="current">About Us</a></li>
+                    <li><a href="index.html class="current">Log Out</a></li>
                 </ul>
             </div>
        <!--   <div class="search">
